feat(web): adding multiple examples to problems
